tests working under ES 7.10.2